tdf#52391 reject/clear formatting of format-only changes

Format-only changes had 1) disabled (in Manage Changes
dialog window) or 2) bad rejection (Track Changes toolbar
icons and Edit->Track Changes menu item functions
"Reject"/"Reject All" resulted acception of the tracked
format-only changes instead of rejection).

Because format-only changes haven't had real rejection
support, yet, this commit 1) adds an often useful
reject-like function in the Manage Changes dialog window:
instead of disabling Reject/Reject All, now these buttons
clears direct text formatting in the area of the tracked
format-only changes. Because this may be not a rejection
(ie. the original text can contain direct text formatting),
the labels of the button warn about it: "Reject/Clear
formatting" and "Reject All/Clear formatting".
Note: "Reject All" still rejects only
insertions/deletions at (now first) pressing,
as from commit a8a3928bd3614e52edc0a4df6f67ce53e787905c.

2) Icons and menu items "Reject"/"Reject All" clear
direct text formatting in the areas of the tracked
format-only changes. Note: this is still not ideal,
but it can help to avoid of unintended direct
text formatting until implementing upcoming ODF 1.3
change tracking.

Change-Id: I87c3ac6165019cae9c49ed4591eaadef9e06beb5
Reviewed-on: https://gerrit.libreoffice.org/67080
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>